kubernetes/beha20/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microblog
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: microblog
