kubernetes/beha20/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microblog
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - studbeh.tech
      secretName: studbeh-tech-tls
  rules:
    - host: studbeh.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microblog
                port:
                  number: 80
